--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,9 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body{
+
+    background-image: url("https://wallpaperaccess.com/full/857693.jpg");
+    background-size: cover;
+
+}
